--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "bunx vite build"
   },
   "dependencies": {
+    "@types/dompurify": "^3.2.0",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "hono": "^4.7.8",
     "openai": "^4.97.0",
