refactor: TypeScriptの拡張子を統一し、tsconfigの設定を追加

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["shared/*"]
-    }
+    },
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
   "exclude": ["dist", "node_modules"]
 }
