--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "type": "module",
   "scripts": {
-  "dev:server": "bun --watch server/index.ts",
-  "build": "bunx vite build --mode production",
-  "build:dev": "bunx vite build --mode development",
-  "lint": "bunx tsc --noEmit"
+    "dev:server": "bun --watch server/index.ts",
+    "build": "bunx vite build --mode production",
+    "build:dev": "bunx vite build --mode development",
+    "lint": "bunx tsc --noEmit",
+    "lint:eslint": "bunx eslint .",
+    "lint:fix": "bunx eslint . --fix"
   },
   "dependencies": {
     "@types/dompurify": "^3.2.0",
@@ -22,10 +24,18 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
+    "@eslint/js": "^9.26.0",
     "@types/bun": "latest",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0",
     "vite": "^6.3.4"
   }
 }
