refactor: 型定義を改善し、エラーハンドリングを強化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,11 @@
   "cSpell.words": [
     "bunx",
     "crxjs",
-    "Gistify"
+    "Gistify",
+    "redaxios"
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "eslint.validate": [
     "javascript",
