feat: cSpellの辞書に新しい単語を追加し、エディタの設定を更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
   "cSpell.words": [
     "bunx",
     "crxjs",
+    "deleteapikey",
     "Gistify",
-    "redaxios"
+    "redaxios",
+    "setapikey"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
